history custom precision
